Change odd figure sizes to something more sensible

--- a/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
+++ b/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
@@ -134,6 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure()\n",
     "noise_im = synthetic_image + read_noise(synthetic_image, 5)\n",
     "show_image(noise_im, cmap='gray')"
    ]
@@ -223,7 +224,7 @@
    "outputs": [],
    "source": [
     "bias_only = bias(synthetic_image, 1100, realistic=True)\n",
-    "show_image(bias_only, cmap='gray', figsize=(7, 9))\n",
+    "show_image(bias_only, cmap='gray', figsize=(10, 10))\n",
     "plt.title('Bias alone, bad columns included', fontsize='20')"
    ]
   },
@@ -234,7 +235,7 @@
    "outputs": [],
    "source": [
     "bias_noise_im = noise_im + bias_only\n",
-    "show_image(bias_noise_im, cmap='gray', figsize=(4, 9))\n",
+    "show_image(bias_noise_im, cmap='gray', figsize=(10, 10))\n",
     "plt.title('Realistic bias frame (includes read noise)', fontsize='20')"
    ]
   },
@@ -331,7 +332,7 @@
     "dark_exposure = 100\n",
     "dark_cur = 0.1\n",
     "dark_only = dark_current(synthetic_image, dark_cur, dark_exposure, hot_pixels=True)\n",
-    "show_image(dark_only, cmap='gray', figsize=(4, 9))\n",
+    "show_image(dark_only, cmap='gray')\n",
     "title_string = 'Dark current only, {dark_cur} $e^-$/sec/pix\\n{dark_exposure} sec exposure'.format(dark_cur=dark_cur, dark_exposure=dark_exposure)\n",
     "plt.title(title_string, fontsize='20');"
    ]
@@ -351,7 +352,7 @@
    "outputs": [],
    "source": [
     "dark_bias_noise_im = bias_noise_im + dark_only\n",
-    "show_image(dark_bias_noise_im, cmap='gray', figsize=(4, 9))\n",
+    "show_image(dark_bias_noise_im, cmap='gray')\n",
     "plt.title('Realistic dark frame \\n(with bias, read noise)', fontsize='20')"
    ]
   },
@@ -413,7 +414,7 @@
    "source": [
     "sky_level = 20\n",
     "sky_only = sky_background(synthetic_image, sky_level)\n",
-    "show_image(sky_only, cmap='gray', figsize=(4, 9))\n",
+    "show_image(sky_only, cmap='gray')\n",
     "plt.title('Sky background only, {} counts input'.format(sky_level), fontsize=20)"
    ]
   },
@@ -424,7 +425,7 @@
    "outputs": [],
    "source": [
     "sky_dark_bias_noise_im = dark_bias_noise_im + sky_only\n",
-    "show_image(sky_dark_bias_noise_im, cmap='gray', figsize=(4, 9))\n",
+    "show_image(sky_dark_bias_noise_im, cmap='gray')\n",
     "plt.title('Sky, dark, bias and noise\\n(Realistic image of clouds)', fontsize=20);"
    ]
   },
@@ -548,7 +549,7 @@
    "outputs": [],
    "source": [
     "stars_only = stars(synthetic_image, 50, max_counts=2000)\n",
-    "show_image(stars_only, cmap='gray', figsize=(4, 9), percu=99.9)\n",
+    "show_image(stars_only, cmap='gray', percu=99.9)\n",
     "plt.title('Stars only'.format(stars_only), fontsize=20)"
    ]
   },
@@ -567,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_image(stars_with_background, cmap='gray', figsize=(4, 9), percu=99.9)\n",
+    "show_image(stars_with_background, cmap='gray', percu=99.9)\n",
     "plt.title('Stars with noise, bias, dark, sky'.format(stars_with_background), fontsize=20)"
    ]
   },
@@ -630,5 +631,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
