Add custom matplotlib style to all notebooks that need it

--- a/notebooks/02-01-Calibrating-bias-images.ipynb
+++ b/notebooks/02-01-Calibrating-bias-images.ipynb
@@ -45,6 +45,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use custom style for larger fonts and figures\n",
+    "plt.style.use('guide.mplstyle')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
