--- a/notebooks/01-06-Image-combination.ipynb
+++ b/notebooks/01-06-Image-combination.ipynb
@@ -51,6 +51,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use custom style for larger fonts and figures\n",
+    "plt.style.use('guide.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Set some default parameters for the plots below\n",
     "rc('font', size=20)\n",
     "rc('axes', grid=True)"
