--- a/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
+++ b/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
@@ -69,6 +69,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use custom style for larger fonts and figures\n",
+    "plt.style.use('guide.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from astropy.nddata import CCDData\n",
     "from astropy.visualization import hist\n",
     "\n",
