--- a/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
@@ -42,6 +42,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use custom style for larger fonts and figures\n",
+    "plt.style.use('guide.mplstyle')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
