--- a/notebooks/08-03-Cosmic-ray-removal.ipynb
+++ b/notebooks/08-03-Cosmic-ray-removal.ipynb
@@ -111,6 +111,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use custom style for larger fonts and figures\n",
+    "plt.style.use('guide.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sidecar import Sidecar"
    ]
   },
