Fix a few outdated links

--- a/notebooks/08-03-Cosmic-ray-removal.ipynb
+++ b/notebooks/08-03-Cosmic-ray-removal.ipynb
@@ -34,7 +34,7 @@
     "sigma clipping (to exclude extreme pixels in individual images like the one with\n",
     "a cosmic ray) will eliminate the cosmic ray from the combined dark image. An\n",
     "alternative would be to combine the images using a median. A detailed\n",
-    "description of each option is discussed in the [section on image combination](01.06-Image-combination.ipynb).\n",
+    "description of each option is discussed in the [section on image combination](01-06-Image-combination.ipynb).\n",
     "\n",
     "The method described below for removing cosmic rays from science images will not\n",
     "work well for removing them from calibration images and is unnecessary because\n",
