--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -35,6 +35,37 @@
     "conda install -c astropy ccdproc photutils ipywidgets matplotlib\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data files\n",
+    "\n",
+    "The list of the data files, and their approximate sizes, is below. You can either download them one by one, or use the download helper included with these notebooks.\n",
+    "\n",
+    "### Use this in a terminal to download the data\n",
+    "\n",
+    "```console\n",
+    "$ python download_data.py\n",
+    "```\n",
+    "\n",
+    "### Use this in a notebook cell to download the data\n",
+    "\n",
+    "```python\n",
+    "%run download_data.py\n",
+    "```\n",
+    "\n",
+    "### List of data files\n",
+    "\n",
+    "+ [Combination of 100 bias images (26MB)](https://zenodo.org/record/3320113/files/combined_bias_100_images.fit.bz2?download=1) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3320113.svg)](https://doi.org/10.5281/zenodo.3320113)\n",
+    "\n",
+    "+ [Single dark frame, exposure time 1,000 seconds (11MB)](https://zenodo.org/record/3312535/files/dark-test-0002d1000.fit.bz2?download=1) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3312535.svg)](https://doi.org/10.5281/zenodo.3312535)\n",
+    "+ [Combination of several dark frames, each 1,000 exposure time (52MB)](https://zenodo.org/record/2634177/files/master_dark_exposure_1000.0.fit.bz2?download=1) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.2634177.svg)](https://doi.org/10.5281/zenodo.2634177)\n",
+    "+ [Combination of several dark frames, each 300 sec (7MB)](https://zenodo.org/record/3332818/files/combined_dark_300.000.fits.bz2?download=1) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3332818.svg)](https://doi.org/10.5281/zenodo.3332818)\n",
+    "+ [Several images from the Palomar Large Format Camera, Chip 0 **(162MB)**](https://zenodo.org/record/3254683/files/example-cryo-LFC.tar.bz2?download=1) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3254683.svg)](https://doi.org/10.5281/zenodo.3254683)\n",
+    "+ [Several images from an Andor Aspen CG16M **(483MB)**](https://zenodo.org/record/3245296/files/example-thermo-electric.tar.bz2?download=1) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3245296.svg)](https://doi.org/10.5281/zenodo.3245296)"
+   ]
   }
  ],
  "metadata": {
@@ -57,5 +88,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
