Fix several examples of duplicate headings in notebooks

--- a/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
+++ b/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
@@ -443,8 +443,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summary\n",
-    "\n",
+    "### Summary of the backgrounds in an astronomical image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Note that the central value of the pixels in the \"realistic\" cloud image above,\n",
     "1130 or so, is the sum of the:\n",
     "\n",
@@ -596,8 +601,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary\n",
-    "\n",
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Everything we have included so far has been additive. Symbolically, the\n",
     "simulated image above was built like this:\n",
     "\n",
