--- a/notebooks/01-08-Overscan.ipynb
+++ b/notebooks/01-08-Overscan.ipynb
@@ -132,16 +132,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Discussion\n",
+    "### Discussion of Example 1\n",
     "\n",
     "There are a few interesting things here.\n",
     "\n",
-    "#### The count value is nearly uniform in the overscan region.\n",
+    "**The count value is nearly uniform in the overscan region.**\n",
     "\n",
     "This is good; ideally the overscan is nearly uniform since the pixels are not\n",
     "illuminated.\n",
     "\n",
-    "#### Some light leaks from the imaging region into the overscan region. This is\n",
+    "**Some light leaks from the imaging region into the overscan region.** \n",
+    "\n",
+    "This is\n",
     "clearest in the flat image, where the counts are much higher than the value to\n",
     "which they asymptote until at least pixel number 2055.\n",
     "\n",
@@ -149,8 +151,8 @@
     "part of the overscan (i.e. the part not contaminated by light) extends from\n",
     "pixel 2055 to the end.\n",
     "\n",
-    "#### There is an offset between the science image and the other two images, and\n",
-    "perhaps between the flat and bias images.\n",
+    "**There is an offset between the science image and the other two images, and\n",
+    "perhaps between the flat and bias images.**\n",
     "\n",
     "This sort of variation is what overscan is intended to correct. It could be that\n",
     "this one science image has a different overscan value (it was taken several\n",
@@ -160,8 +162,8 @@
     "Either way, subtracting overscan from each of the images allows for correction\n",
     "of these offsets.\n",
     "\n",
-    "#### Dark current *in this camera* is essentially zero so the overscan is\n",
-    "measuring bias\n",
+    "**Dark current *in this camera* is essentially zero so the overscan is\n",
+    "measuring bias.**\n",
     "\n",
     "To be clear, this isn't apparent from the graph above, but cryogenically cooled\n",
     "cameras have negligible dark current.\n",
@@ -243,29 +245,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Discussion\n",
+    "### Discussion of Example 2\n",
     "\n",
     "The camera also has some interesting features.\n",
     "\n",
-    "#### Count values change quite a bit in the overscan region\n",
+    "**Count values change quite a bit in the overscan region**\n",
     "\n",
     "This is clearest in the overscan for the flat. Not only is light leaking into\n",
     "the overscan, the overscan appears to be mostly light leakage. One pixel may be\n",
     "useful at best.\n",
     "\n",
-    "#### Overscan includes dark current\n",
+    "**Overscan includes dark current**\n",
     "\n",
     "The overscan for the dark image in the figure above is roughly 10 counts higher\n",
     "than the counts for the bias. The dark current for this camera is roughly 0.01\n",
     "counts/pixel/second. For a 1000 second dark exposure, the expected dark counts\n",
     "are about 10, which is the difference seen in the graph.\n",
     "\n",
-    "#### There is an offset between the bias/dark and science/flat images\n",
+    "**There is an offset between the bias/dark and science/flat images**\n",
     "\n",
     "The offset in this camera is roughly 50 counts. It's large enough that one ought\n",
     "to be hesitant to use the overscan for this camera.\n",
     "\n",
-    "#### The overscan counts are higher than the average bias counts\n",
+    "**The overscan counts are higher than the average bias counts**\n",
     "\n",
     "Note that for the bias image, counts increase up to the pixel where overscan\n",
     "starts and then level out. It turns out that overscan counts are *higher* than\n",
@@ -306,5 +308,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
