--- a/notebooks/02-01-Calibrating-bias-images.ipynb
+++ b/notebooks/02-01-Calibrating-bias-images.ipynb
@@ -58,6 +58,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Data for these examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See the [Preface notebook](00-00-Preface.ipynb) for download links for all data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Example 1: With overscan subtraction"
    ]
   },
@@ -65,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decide where to put your calibrated images\n",
+    "### Decide where to put your Example 1 calibrated images\n",
     "Though it is possible to overwrite your raw data with calibrated images that is\n",
     "a bad idea. Here we create a folder called `example1-reduced` that will contain\n",
     "the calibrated data and create it if it doesn't exist."
@@ -79,19 +93,6 @@
    "source": [
     "calibrated_data = Path('.', 'example1-reduced')\n",
     "calibrated_data.mkdir(exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data for this example\n",
-    "\n",
-    "The data for this example can be downloaded from\n",
-    "[http://doi.org/10.5281/zenodo.3254683](http://doi.org/10.5281/zenodo.3254683)\n",
-    "\n",
-    "In what follows, the unpacked data is presumed to be available in the same\n",
-    "directory as this notebook."
    ]
   },
   {
@@ -134,8 +135,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Determine overscan region\n",
-    "\n",
+    "### Determine overscan region for the LFC Chip 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Please see the discussion of this camera in\n",
     "[the overscan notebook](01.08-Overscan.ipynb#Case-1:-Cryogenically-cooled-Large-Format-Camera-(LFC)-at-Palomar) for the appropriate overscan region\n",
     "to use for this camera. Note, in particular, that it differs from the the value\n",
@@ -322,8 +328,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Processing a folder of bias images\n",
-    "\n",
+    "### Processing the folder of bias images for the LFC Chip 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Processing each of the bias images individually would be tedious, at best.\n",
     "Instead, we can use the [`ImageFileCollection`](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html) we created above to\n",
     "loop over only the bias images, saving each in the folder `calibrated_data`. In\n",
@@ -334,9 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for ccd, file_name in files.ccds(imagetyp='BIAS',            # Just get the bias frames\n",
@@ -394,7 +403,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decide where to put your calibrated images\n",
+    "### Decide where to put your calibrated Example 2 images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Though it is possible to overwrite your raw data with calibrated images that is\n",
     "a bad idea. Here we create a folder called `example2-reduced` that will contain\n",
     "the calibrated data and create it if it doesn't exist."
@@ -411,15 +426,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data for this example\n",
-    "\n",
-    "The data for this example can be downloaded from XXXX"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -433,8 +439,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Determine overscan region\n",
-    "\n",
+    "### Determine overscan region for this camera"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Please see the discussion of this camera in [the overscan notebook](01.08-Overscan.ipynb#Case-2:-Thermo-electrically-cooled-Apogee-Aspen-CG16M) for\n",
     "a discussion of the overscan region of this camera. The overscan for this camera\n",
     "is not useful but should be trimmed out at this stage.\n",
@@ -536,8 +547,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Processing a folder of bias images\n",
-    "\n",
+    "### Processing the folder of bias images for Example 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "As in [Example 1](#Example-1:-With-overscan-subtraction), above, we can use the\n",
     "[`ImageFileCollection`](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html) we created  to loop over only the bias images,\n",
     "saving each in the folder `calibrated_data`."
@@ -608,5 +624,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
