--- a/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02-04-Combine-bias-images-to-make-master.ipynb
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Result\n",
+    "### Result for Example 1\n",
     "\n",
     "A single calibrated image and the combined image are shown below. There is\n",
     "significant two-dimensional structure in the bias that cannot easily be removed\n",
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Result\n",
+    "### Result for Example 2\n",
     "\n",
     "The difference between a single calibrated bias image and the combined bias\n",
     "image is much clearer in this case."
@@ -257,5 +257,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
