--- a/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
+++ b/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
@@ -264,8 +264,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Making an image to check for hot pixels\n",
-    "\n",
+    "### Taking an image to measure dark current "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The image below is a combination of 20 dark frames, each a 1000 sec exposure.\n",
     "That exposure time was chosen so that the expected number of dark electrons was\n",
     "at least somewhat larger than the read noise expected in a combination of 20\n",
@@ -487,5 +492,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
