--- a/notebooks/03-06-Combine-darks-for-use-in-later-calibration-steps.ipynb
+++ b/notebooks/03-06-Combine-darks-for-use-in-later-calibration-steps.ipynb
@@ -103,8 +103,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make a combined image for each exposure time\n",
-    "\n",
+    "### Make a combined image for each exposure time in Example 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There are several dark exposure times in this data set. By converting the times\n",
     "in the summary table to a set it returns only the unique values."
    ]
@@ -160,8 +165,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Result\n",
-    "\n",
+    "### Result for Example 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A single calibrated 300 second dark image and the combined 300 second image are\n",
     "shown below."
    ]
@@ -204,8 +214,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make a combined image for each exposure time\n",
-    "\n",
+    "### Make a combined image for each exposure time in Example 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this example there are only darks of a single exposure time."
    ]
   },
@@ -255,8 +270,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Result\n",
-    "\n",
+    "### Result for Example 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The difference between a single calibrated bias image and the combined bias\n",
     "image is miuch clearer in this case."
    ]
@@ -296,5 +316,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
