--- a/notebooks/05-03-Calibrating-the-flats.ipynb
+++ b/notebooks/05-03-Calibrating-the-flats.ipynb
@@ -262,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subtract bias, if necessary\n",
+    "### Subtracting bias is not necessary in this example\n",
     "\n",
     "For this particular set of images there are darks with exposure time 7, 70 and\n",
     "300 sec. The flat images have the exposure times listed below:"
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subtract dark current, scaling if necessary (scale down when possible)\n",
+    "### Subtract dark current, no scaling necessary in this example\n",
     "\n",
     "We need to subtract the dark without scaling it. Rather than manually figuring\n",
     "out which dark to subtract we use the dark frame closest in exposure time to the\n",
@@ -543,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subtract bias, if necessary\n",
+    "### Subtracting bias is necessary \n",
     "\n",
     "For this particular set of images there is a combined dark with exposure time 90\n",
     "sec. The flat images have the exposure times listed below:"
@@ -603,7 +603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subtract dark current, scaling if necessary (scale down when possible)\n",
+    "### Subtract dark current, scaling as needed\n",
     "\n",
     "Here we will need to scale the dark from the 90 sec exposure time of the dark\n",
     "frame to the exposure time of each flat image. The [ccdproc function\n",
