--- a/notebooks/06-00-Reducing-science-images.ipynb
+++ b/notebooks/06-00-Reducing-science-images.ipynb
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 1: before and after\n",
+    "### Before and after for Example 1\n",
     "\n",
     "The cell below displays each science image before and after calibration."
    ]
@@ -261,9 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "source": [
     "In each reduced image the overall pattern in the flat field has been removed,\n",
     "and the sensor glow along the left edge and in the bottom left corner of the\n",
@@ -325,9 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lights = ifc_raw.summary[ifc_raw.summary['imagetyp'] == science_imagetyp.upper()]\n",
@@ -471,5 +467,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
