Typo correction fixes #19

--- a/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
+++ b/notebooks/02-00-Handling-overscan-trimming-and-bias-subtraction.ipynb
@@ -102,9 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, (ax_1_bias, ax_avg_bias) = plt.subplots(1, 2, figsize=(30, 15))\n",
@@ -143,7 +141,7 @@
     "\n",
     "As discussed at length in the [notebook on combination](01-06-Image-combination.ipynb), the reason for\n",
     "taking and combining several calibration images is to reduce the noise if the\n",
-    "images used for calibration. The difference between a single image and a\n",
+    "images are used for calibration. The difference between a single image and a\n",
     "combination of images is apparent in the images above. Another way to see the\n",
     "impact of combining images in the histogram of pixel values. Notice that the\n",
     "distribution of values is much narrower for the combined image than for a single\n",
@@ -213,5 +211,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
