--- a/notebooks/03-05-Calibrate-dark-images.ipynb
+++ b/notebooks/03-05-Calibrate-dark-images.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ccd, file_name in ex1_darks_raw.ccds(imagetyp='DARK',            # Just get the bias frames\n",
+    "for ccd, file_name in ex1_darks_raw.ccds(imagetyp='DARK',            # Just get the dark frames\n",
     "                                         ccd_kwargs={'unit': 'adu'}, # CCDData requires a unit for the image if \n",
     "                                                                     # it is not in the header\n",
     "                                         return_fname=True           # Provide the file name too.\n",
@@ -301,5 +301,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
