First round of edits
(cherry picked from commit dc17e7c78b9fcec1a4824a0733a8ee6185376f50)

--- a/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
+++ b/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center><i>Made possible by the Astropy Project and ScienceBetter Consulting through financial support from the Community Software Initiative at the Space Telescope Science Institute.</i></center>\n",
+    "\n",
     "<a id=\"title_ID\"></a>\n",
     "\n",
     "<a href=\"http://photutils.readthedocs.io/en/stable/index.html\"><img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300></a>\n",
@@ -136,7 +138,7 @@
    "metadata": {},
    "source": [
     "#### Modifying data\n",
-    "For the purposes of this notebook example, we're going to add a background effect to this data, but don't worry about this. (Pay no attention to that man behind the curtain!)"
+    "For the purposes of this notebook example, we're going to add a linear background effect from the top to the bottom of these data. But don't worry about this (pay no attention to that man behind the curtain!)."
    ]
   },
   {
@@ -171,7 +173,7 @@
    "outputs": [],
    "source": [
     "from astropy.nddata import CCDData\n",
-    "unit = u.ct / u.s\n",
+    "unit = u.electron / u.s\n",
     "xdf_image = CCDData(modified_data, unit=unit, meta=header)"
    ]
   },
@@ -452,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Background2D` class allows users to model 2-dimensional backgrounds, by evaluating the background signal in small boxes, and smoothing these boxes to reconstruct a continuous 2D background. The class includes the following arguments/attributes:\n",
+    "The `Background2D` class allows users to model 2-dimensional backgrounds, by calculating the mean or median in small boxes, and smoothing these boxes to reconstruct a continuous 2D background. The class includes the following arguments/attributes:\n",
     "* **`box_size`** - the size of the boxes used to calculate the background. This should be larger than individual sources, yet still small enough to encompass changes in the background.\n",
     "* **`filter_size`** - the size of the median filter used to smooth the final 2D background.\n",
     "* **`filter_threshold`** - threshold below which the smoothing median filter will not be applied.\n",
