--- a/notebooks/photutils/02_source_detection/02_source_detection.ipynb
+++ b/notebooks/photutils/02_source_detection/02_source_detection.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center><i>Made possible by the Astropy Project and ScienceBetter Consulting through financial support from the Community Software Initiative at the Space Telescope Science Institute.</i></center>\n",
+    "\n",
     "<a id=\"title_ID\"></a>\n",
     "\n",
     "<a href=\"http://photutils.readthedocs.io/en/stable/index.html\"><img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300></a>\n",
@@ -148,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, our data is in electrons (counts) per second."
+    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, our data is in electrons per second."
    ]
   },
   {
@@ -157,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unit = u.electron/ u.s\n",
+    "unit = u.electron / u.s\n",
     "xdf_image = CCDData(data, unit=unit, meta=header, mask=mask)"
    ]
   },
@@ -452,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Note: Comparing `DAOStarFinder` and `IRAFStarFinder`"
+    "## Note: Comparing `DAOStarFinder` and `IRAFStarFinder`"
    ]
   },
   {
