--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -4,9 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center><i>Made possible by the Astropy Project and ScienceBetter Consulting through financial support from the Community Software Initiative at the Space Telescope Science Institute.</i></center>\n",
+    "\n",
     "<a id=\"title_ID\"></a>\n",
     "\n",
     "<a href=\"http://photutils.readthedocs.io/en/stable/index.html\"><img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300></a>\n",
+    "\n",
     "\n",
     "# Aperture Photometry with `photutils`\n",
     "---"
