--- a/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
+++ b/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
@@ -239,7 +239,7 @@
    "source": [
     "You probably noticed that a large portion of the data is equal to zero. The data we are using is a reduced mosaic that combines many different exposures, and that has been rotated such that not all of the array holds data. \n",
     "\n",
-    "We want to **mask** out the non-data portions of the image array,, so all of those pixels that have a value of zero don't interfere with our statistics and analyses of the data."
+    "We want to **mask** out the non-data portions of the image array, so all of those pixels that have a value of zero don't interfere with our statistics and analyses of the data."
    ]
   },
   {
