--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -301,7 +301,7 @@
     "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
-    "ax1.set_title('find\\_peaks Sources')"
+    "ax1.set_title('find_peaks Sources')"
    ]
   },
   {
@@ -661,11 +661,11 @@
    "source": [
     "# The CCDData mask will be automatically applied\n",
     "phot_table = aperture_photometry(xdf_image, elliptical_apertures[0])\n",
-    "id = 1\n",
+    "idx = 1\n",
     "for aperture in elliptical_apertures[1:]:\n",
-    "    id += 1\n",
+    "    idx += 1\n",
     "    phot_row = aperture_photometry(xdf_image, aperture)[0]\n",
-    "    phot_row[0] = id\n",
+    "    phot_row[0] = idx\n",
     "    phot_table.add_row(phot_row)"
    ]
   },
@@ -728,7 +728,7 @@
     "plt.xscale('log')\n",
     "plt.title('Count Rate v. Aperture Area')\n",
     "plt.xlabel('Aperture Area [pixels$^2$]')\n",
-    "plt.xlabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')))"
+    "plt.ylabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')))"
    ]
   },
   {
@@ -845,11 +845,11 @@
    "source": [
     "# The CCDData mask will be automatically applied\n",
     "bkg_phot_table = aperture_photometry(xdf_image, elliptical_annuli[0])\n",
-    "id = 1\n",
+    "idx = 1\n",
     "for aperture in elliptical_annuli[1:]:\n",
-    "    id += 1\n",
+    "    idx += 1\n",
     "    phot_row = aperture_photometry(xdf_image, aperture)[0]\n",
-    "    phot_row[0] = id\n",
+    "    phot_row[0] = idx\n",
     "    bkg_phot_table.add_row(phot_row)"
    ]
   },
